--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
-spring.config.import = optional:file:.env[.properties]
 jwt.token.secret = ${JWT_SECRET}
+spring.config.import = optional:file:.env[.properties]
+spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class=com.cj.jdbc.Driver
+spring.datasource.hikari.connection-timeout=20000   
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=12  
+spring.datasource.hikari.idle-timeout=300000  
+spring.datasource.hikari.max-lifetime=1200000  
+spring.datasource.hikari.auto-commit=true
