--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 jwt.token.secret = ${JWT_SECRET}
 spring.config.import = optional:file:.env[.properties]
+spring.shell.interactive.enabled=true
+spring.shell.script.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
