--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-ant</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
