--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.shell.script.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class=com.cj.jdbc.Driver
 spring.datasource.hikari.connection-timeout=20000   
 spring.datasource.hikari.minimum-idle=5
