--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,12 +2,12 @@ spring:
   datasource:
     driver-class: com.cj.jdbc.Driver
     hikari:
-      connection-timeout: '20000   '
-      idle-timeout: '300000  '
-      maximum-pool-size: '12  '
-      max-lifetime: '1200000  '
-      auto-commit: 'true'
-      minimum-idle: '5'
+      connection-timeout: 20000
+      idle-timeout: 300000
+      maximum-pool-size: 12
+      max-lifetime: 1200000
+      auto-commit: true
+      minimum-idle: 5
     password: ${POSTGRES_PASSWORD}
     username: ${POSTGRES_USER}
     url: jdbc:postgresql://localhost:5432/${POSTGRES_DB}
@@ -15,9 +15,9 @@ spring:
     import: optional:file:.env[.properties]
   shell:
     script:
-      enabled: 'true'
+      enabled: true
     interactive:
-      enabled: 'true'
+      enabled: true
   jpa:
     hibernate:
       ddl-auto: create-drop
