--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,14 @@
 			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-ant</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-postgresql</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
