--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,36 +15,19 @@ spring:
     import: optional:file:.env[.properties]
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+  flyway:
+    baseline-on-migrate: true
+    enabled: true
+    password: ${POSTGRES_PASSWORD}
+    user: ${POSTGRES_USER}
+    baseline-description: "init"
+    baseline-version: 0
 jwt:
   token:
     secret: ${JWT_SECRET}
     lifetime: 60
----
-spring:
-  config:
-    activate:
-      on-profile: dev
-  shell:
-    script:
-      enabled: true
-    interactive:
-      enabled: true
-server:
-  port: 8443
-  ssl:
-    key-store: keystore.jks
-    key-store-password: ${SSL_PASSWORD}
-    key-password: ${SSL_PASSWORD}
-jwt:
-  token:
-    lifetime: 3600
-logging:
-  level:
-    org:
-      springframework:
-        security: DEBUG
