--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,5 @@ POSTGRES_USER=admin
 POSTGRES_DB=it-offers
 POSTGRES_PASSWORD=secret
 SSL_PASSWORD=somePassword
+MONGO_INITDB_ROOT_USERNAME=admin
+MONGO_INITDB_ROOT_PASSWORD=secret
