--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,8 +7,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        mongodb-version: [ '6.0', '7.0', '8.0' ]
     steps:
     - uses: actions/checkout@v4
+
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.11.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}
+        mongodb-username: supercharge
+        mongodb-password: secret
+        mongodb-db: supercharge
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
