Introduce log level DEBUG on auto-testing environment

--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -4,3 +4,8 @@ spring:
       ddl-auto: update
   flyway:
     enabled: false
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
