--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,9 +1,13 @@
-name: OfferId CICD Flow
+name: it-offers ci/cd
 on:
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+
+env:
+  JWT_SECRET: 2D4A614E645267556B58703273357638792F423F4428472B4B6250655368566D
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -43,9 +47,10 @@ jobs:
 #        EOF
 #        # Do whatever you like in here
 
-    - name: Test
+# TODO step below is rather to remove
+    - name: Some random step that can be removed
       run: |
-        echo "Run your integration Tests"
+        echo "Another random step that can be removed"  
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -53,5 +58,6 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
+
+    - name: Build and test with Maven
       run: mvn clean install
