--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mongodb:
-        image: mongo:4.4.6
+        image: mongo:6
         env:
           MONGO_INITDB_ROOT_USERNAME: root
           MONGO_INITDB_ROOT_PASSWORD: example
@@ -18,6 +18,8 @@ jobs:
         ports:
           - 27017:27017
         options: >-
+          --health-cmd "mongosh --eval 'db.runCommand(\"ping\")'"
+          --command "--replSet test" # Try to specify replica set
           --health-cmd mongo
           --health-interval 10s
           --health-timeout 5s
