--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,8 +19,7 @@ jobs:
           - 27017:27017
         options: >-
           --health-cmd "mongosh --eval 'db.runCommand(\"ping\")'"
-          --command "--replSet test" # Try to specify replica set
-          --health-cmd mongo
+          --command "--replSet test"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
