--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,6 +44,10 @@ jobs:
 #        EOF
 #        # Do whatever you like in here
 
+    - name: Start MongoDB
+      id: start-mongodb
+      run: docker run --rm -d -p 27017:27017 --name mongodb  mongo:6.0 --replSet test --bind_ip_all
+
 # TODO step below is rather to remove
     - name: Some random step that can be removed
       run: |
