--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     services:
-      mongodb:
+      mongo:
         image: mongo:6
         env:
           MONGO_INITDB_ROOT_USERNAME: root
@@ -46,7 +46,7 @@ jobs:
 
     - name: Start MongoDB
       id: start-mongodb
-      run: docker run --rm -d -p 27017:27017 --name mongodb mongosh --replSet test --bind_ip_all
+      run: docker run --rm -d -p 27017:27017 --name mongo  mongo:6.0 --replSet test --bind_ip_all
 
 # TODO step below is rather to remove
     - name: Some random step that can be removed
