--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mongo:
-        image: mongo:6
+        image: mongodb/mongodb-community-server:latest
         env:
           MONGO_INITDB_ROOT_USERNAME: root
           MONGO_INITDB_ROOT_PASSWORD: example
@@ -46,9 +46,13 @@ jobs:
 
     - name: Start MongoDB
       id: start-mongodb
-      run: docker run --rm -d -p 27017:27017 --name mongo  mongo:6.0 --replSet test --bind_ip_all
+      run: docker run --rm -d -p 27017:27017 --name mongodb mongodb/mongodb-community-server:latest
 
-# TODO step below is rather to remove
+
+
+
+
+      # TODO step below is rather to remove
     - name: Some random step that can be removed
       run: |
         echo "Another random step that can be removed"  
