--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,20 +8,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    services:
-      mongo:
-        image: mongodb/mongodb-community-server:latest
-        env:
-          MONGO_INITDB_ROOT_USERNAME: root
-          MONGO_INITDB_ROOT_PASSWORD: example
-          MONGO_INITDB_DATABASE: it-offers
-        ports:
-          - 27017:27017
-        options: >-
-          --health-cmd "mongosh --eval 'db.runCommand(\"ping\")'"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+#    services:
+#      mongo:
+#        image: mongodb/mongodb-community-server:latest
+#        env:
+#          MONGO_INITDB_ROOT_USERNAME: root
+#          MONGO_INITDB_ROOT_PASSWORD: example
+#          MONGO_INITDB_DATABASE: it-offers
+#        ports:
+#          - 27017:27017
+#        options: >-
+#          --health-cmd "mongosh --eval 'db.runCommand(\"ping\")'"
+#          --health-interval 10s
+#          --health-timeout 5s
+#          --health-retries 5
 
     steps:
     - uses: actions/checkout@v4
