--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,13 +44,14 @@ jobs:
 #        EOF
 #        # Do whatever you like in here
 
+#    - name: Start MongoDB
+#      id: start-mongodb
+#      run: docker run --rm -d -p 27017:27017 --name mongodb mongodb/mongodb-community-server:latest
+
     - name: Start MongoDB
-      id: start-mongodb
-      run: docker run --rm -d -p 27017:27017 --name mongodb mongodb/mongodb-community-server:6.0
-
-
-
-
+      uses: supercharge/mongodb-github-action@1.11.0
+      with:
+        mongodb-version: '6.0'
 
       # TODO step below is rather to remove
     - name: Some random step that can be removed
