--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,4 +1,7 @@
 spring:
+  data:
+    mongodb:
+      uri: mongodb://${MONGO_DB_USER}:${MONGO_DB_PASSWORD}@localhost:27017/${MONGO_DB_NAME}
   jpa:
     hibernate:
       ddl-auto: update
