Remove authentication from MongoDb

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -73,6 +73,6 @@ jobs:
       run: mvn clean install
       env:
         JWT_SECRET: 2D4A614E645267556B58703273357638792F423F4428472B4B6250655368566D
-        MONGO_DB_USER: admin
-        MONGO_DB_PASSWORD: admin
+#        MONGO_DB_USER: admin
+#        MONGO_DB_PASSWORD: admin
         MONGO_DB_NAME: it-offers
