--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,7 +53,7 @@ jobs:
       with:
         mongodb-version: '6.0'
         mongodb-replica-set: test-rs
-        mongodb-username: admin
+        mongodb-username: admin5678
         mongodb-password: admin
         mongodb-db: it-offers
 
@@ -73,6 +73,6 @@ jobs:
       run: mvn clean install
       env:
         JWT_SECRET: 2D4A614E645267556B58703273357638792F423F4428472B4B6250655368566D
-        MONGO_DB_USER: admin
+        MONGO_DB_USER: admin1234
         MONGO_DB_PASSWORD: admin
         MONGO_DB_NAME: it-offers
