--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,9 +53,9 @@ jobs:
       with:
         mongodb-version: '6.0'
         mongodb-replica-set: test-rs
-#        mongodb-username: admin5678
-#        mongodb-password: admin
-        mongodb-db: it-offers
+        mongodb-username: supercharge
+        mongodb-password: secret
+        mongodb-db: supercharge
 
       # TODO step below is rather to remove
     - name: Some random step that can be removed
@@ -73,6 +73,6 @@ jobs:
       run: mvn clean install
       env:
         JWT_SECRET: 2D4A614E645267556B58703273357638792F423F4428472B4B6250655368566D
-        MONGO_DB_USER: admin1234
-        MONGO_DB_PASSWORD: admin
-        MONGO_DB_NAME: it-offers
+        MONGO_DB_USER: supercharge
+        MONGO_DB_PASSWORD: secret
+        MONGO_DB_NAME: supercharge
