--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
 
@@ -16,9 +15,7 @@ jobs:
       uses: supercharge/mongodb-github-action@1.11.0
       with:
         mongodb-version: '6.0'
-        mongodb-username: supercharge
-        mongodb-password: secret
-        mongodb-db: supercharge
+        mongodb-db: it-offers
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -31,6 +28,4 @@ jobs:
       run: mvn clean install
       env:
         JWT_SECRET: 2D4A614E645267556B58703273357638792F423F4428472B4B6250655368566D
-        MONGO_DB_USER: supercharge
-        MONGO_DB_PASSWORD: secret
-        MONGO_DB_NAME: supercharge
+        MONGODB_URI: mongodb://localhost:27017/it-offers
