--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ jobs:
       uses: supercharge/mongodb-github-action@1.11.0
       with:
         mongodb-version: '6.0'
-        mongodb-db: it-offers-integration-tests
+        mongodb-db: it-offers
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -28,4 +28,4 @@ jobs:
       run: mvn clean install
       env:
         JWT_SECRET: 2D4A614E645267556B58703273357638792F423F4428472B4B6250655368566D
-        MONGODB_URI: mongodb://localhost:27017/it-offers-integration-tests
+        MONGODB_URI: mongodb://localhost:27017/it-offers
