--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: "${MONGO_DB_URI}/it-offers-dev"
+      uri: ${MONGO_DB_URI}
   shell:
     script:
       enabled: true
