--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
         mongodb-replica-set: test-rs
         mongodb-username: admin
         mongodb-password: admin
-        mongodb-db: it-offers
+        mongodb-db: it-offers-integration-tests
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -31,4 +31,4 @@ jobs:
       run: mvn clean install
       env:
         JWT_SECRET: 2D4A614E645267556B58703273357638792F423F4428472B4B6250655368566D
-        MONGODB_URI: mongodb://localhost:27017/it-offers
+        MONGODB_URI: mongodb://localhost:27017/it-offers-integration-tests
