--- a/.env.dist
+++ b/.env.dist
@@ -5,3 +5,4 @@ POSTGRES_PASSWORD=secret
 SSL_PASSWORD=somePassword
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=example
+MONGO_DB_URI = mongodb://admin:admin@localhost:27017
