--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - database_volume:/var/lib/postgresql
+      - postgresql-volume:/var/lib/postgresql
     env_file: ".env"
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
@@ -30,4 +30,4 @@ services:
       MONGO_INITDB_DATABASE: it-offers
 
 volumes:
-  database_volume: {}
+  postgresql-volume: {}
