--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,3 +36,9 @@ jobs:
         POSTGRES_DB: it-offers
         JWT_SECRET: 2D4A614E645267556B58703273357638792F423F4428472B4B6250655368566D
         MONGO_DB_URI: mongodb://localhost:27017
+
+    - name: Save artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: github-action-artifact
+        path: artifacts
