--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,3 +42,9 @@ jobs:
       with:
         name: github-action-artifact
         path: artifacts
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
