--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,6 +52,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - name: Open Directory
+      working-directory: app
+      run: |
+        ls -la
+
     - name: Build and push
       uses: docker/build-push-action@v5
       with:
