--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -63,3 +63,14 @@ jobs:
         file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
+
+  deploy:
+    needs: build
+    runs-on: [ aws-ec2 ]
+    steps:
+      - name: Pull Image from docker hub
+        run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
+      - name: Delete old container
+        run: sudo docker rm -f it-offers
+      - name: Run Docker Image
+        run: sudo docker run -d -p 8080:8080 --name it-offers-container ${{ secrets.DOCKERHUB_USERNAME }}/it-offers
