--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,6 +1,6 @@
 spring:
   data:
     mongodb:
-      uri: "${MONGO_DB_URI}/it-offers-dev"
+      uri: "${MONGO_DB_URI}"
   config:
     import: aws-secretsmanager:/staging/it-offers/envs
