--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -3,4 +3,4 @@ spring:
     mongodb:
       uri: "${MONGO_DB_URI}"
   config:
-    import: aws-secretsmanager:/staging/it-offers/envs
+    import: aws-secretsmanager:staging/it-offers/envs
