--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,6 +1,4 @@
 spring:
-  data:
-    mongodb:
-      uri: "${MONGO_DB_URI}"
   config:
-    import: aws-secretsmanager:staging/it-offers/envs
+    import:
+    - aws-secretsmanager:staging/it-offers/envs
