--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: "${MONGO_DB_URI}/it-offers-integration-tests"
+      uri: ${MONGO_DB_URI}/it-offers-integration-tests
   jpa:
     hibernate:
       ddl-auto: validate
