--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -72,4 +72,4 @@ jobs:
         run: docker rm -f it_offers_container
 
       - name: Run docker container
-        run: docker run -d -p 8080:8080 -e "SPRING_PROFILES_ACTIVE=prod" --name it_offers_container ${{ secrets.DOCKERHUB_USERNAME }}/it-offers
+        run: docker run -d -p 80:8080 -e "SPRING_PROFILES_ACTIVE=prod" --name it_offers_container ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
