--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -63,7 +63,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: ${{ fromJSON('["ubuntu-latest", "self-hosted"]')[github.repository == 'github/docs-internal'] }}
+    runs-on: self-hosted
     steps:
       - name: Pull image from docker hub
         run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
