--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -70,6 +70,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Testing Docker step #TODO ro remove!
+        run: docker ps #TODO ro remove!
+
       - name: Pull image from docker hub
         run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
 
