--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -70,14 +70,11 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Testing Docker step #TODO ro remove!
-        run: sudo docker ps #TODO ro remove!
-
       - name: Pull image from docker hub
-        run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
+        run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
 
       - name: Remove docker container
-        run: docker rm -f it_offers_container
+        run: sudo docker rm -f it_offers_container
 
       - name: Run docker container
-        run: docker run -d -p 80:8080 -e "SPRING_PROFILES_ACTIVE=prod" --name it_offers_container ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
+        run: sudo docker run -d -p 80:8080 -e "SPRING_PROFILES_ACTIVE=prod" --name it_offers_container ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
