--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -63,6 +63,7 @@ jobs:
   deploy:
     needs: build
     runs-on: self-hosted
+    timeout-minutes: 2
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
