--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -60,17 +60,17 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
 
-  deploy:
-    needs: build
-    runs-on: self-hosted
-    timeout-minutes: 2
-    steps:
-
-      - name: Pull image from docker hub
-        run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
-
-      - name: Remove docker container
-        run: sudo docker rm -f it_offers_container
-
-      - name: Run docker container
-        run: sudo docker run -d -p 80:8080 -e "SPRING_PROFILES_ACTIVE=prod" --name it_offers_container ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
+#  deploy:
+#    needs: build
+#    runs-on: self-hosted
+#    timeout-minutes: 2
+#    steps:
+#
+#      - name: Pull image from docker hub
+#        run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
+#
+#      - name: Remove docker container
+#        run: sudo docker rm -f it_offers_container
+#
+#      - name: Run docker container
+#        run: sudo docker run -d -p 80:8080 -e "SPRING_PROFILES_ACTIVE=prod" --name it_offers_container ${{ secrets.DOCKERHUB_USERNAME }}/it-offers:latest
