--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,11 @@
 			<artifactId>spring-cloud-aws-starter-secrets-manager</artifactId>
 			<version>3.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.11.163</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
