--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -37,6 +37,10 @@ jwt:
     secret: ${JWT_SECRET}
     lifetime: 60
 application:
+  aws:
+    s3:
+      accessKey: ${AWS_S3_ACCESS_KEY}
+      secretKey: ${AWS_S3_SECRET_KEY}
   provider:
     just-join-it:
       origin: https://justjoin.it
