--- a/.env.dist
+++ b/.env.dist
@@ -9,3 +9,4 @@ MONGO_INITDB_ROOT_PASSWORD=example
 MONGO_DB_URI = mongodb://admin:admin@localhost:27017
 AWS_S3_ACCESS_KEY={{create new AWS user}}
 AWS_S3_SECRET_KEY={{create new AWS user}}
+AWS_S3_BUCKET={{create new AWS bucket}}
