--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,6 +41,7 @@ application:
     s3:
       accessKey: ${AWS_S3_ACCESS_KEY}
       secretKey: ${AWS_S3_SECRET_KEY}
+      bucket: ${AWS_S3_BUCKET}
   provider:
     just-join-it:
       origin: https://justjoin.it
