--- a/.env.dist
+++ b/.env.dist
@@ -10,3 +10,4 @@ MONGO_DB_URI = mongodb://admin:admin@localhost:27017
 AWS_S3_ACCESS_KEY={{create new AWS user}}
 AWS_S3_SECRET_KEY={{create new AWS user}}
 AWS_S3_BUCKET={{create new AWS bucket}}
+CORS_ORIGIN=https://localhost:3000
