--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -37,6 +37,9 @@ jwt:
     secret: ${JWT_SECRET}
     lifetime: 60
 application:
+  security:
+    cors:
+      origin: ${CORS_ORIGIN}
   aws:
     s3:
       accessKey: ${AWS_S3_ACCESS_KEY}
