feat(#71): change PMD goals

--- a/pom.xml
+++ b/pom.xml
@@ -196,7 +196,8 @@
 					<execution>
 						<phase>verify</phase>
 						<goals>
-							<goal>pmd</goal>
+							<goal>check</goal>
+							<goal>cpd-check</goal>
 						</goals>
 					</execution>
 				</executions>
