chore(#73): add Spotless check do CI

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,6 +26,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
+    - name: Run Spotless Check
+      run: mvn spotless:check
+
     - name: Run PMD
       run: |
         mvn clean pmd:check
