feat(#81): create nfj http connector

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -48,3 +48,5 @@ application:
   provider:
     just-join-it:
       origin: https://justjoin.it
+    no-fluff-jobs:
+      origin: https://nofluffjobs.com
