--- a/.env.dist
+++ b/.env.dist
@@ -11,3 +11,5 @@ AWS_S3_ACCESS_KEY={{create new AWS user}}
 AWS_S3_SECRET_KEY={{create new AWS user}}
 AWS_S3_BUCKET={{create new AWS bucket}}
 CORS_ORIGIN=https://localhost:3000
+APP_EMAIL_ADDRESS=some@email.com
+APP_EMAIL_PASSWORD=example
