--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,6 +32,17 @@ spring:
     user: ${POSTGRES_USER}
     baseline-description: "init"
     baseline-version: 0
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${APP_EMAIL_ADDRESS}
+    password: ${APP_EMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 jwt:
   token:
     secret: ${JWT_SECRET}
