feat(#69): service to send emails

--- a/.env.dist
+++ b/.env.dist
@@ -13,3 +13,4 @@ AWS_S3_BUCKET={{create new AWS bucket}}
 CORS_ORIGIN=https://localhost:3000
 APP_EMAIL_ADDRESS=some@email.com
 APP_EMAIL_PASSWORD=example
+REPORT_TO_EMAIL=some@email.com
