chore(#105): use mongodb from testcontainers in test environment

--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: ${MONGO_DB_URI}/it-offers-integration-tests
+      uri: mongodb://localhost:27017/it-offers-integration-tests
   jpa:
     show-sql: false
     hibernate:
